--- a/test_url.html
+++ b/test_url.html
@@ -1,5 +1,10 @@
-<!-- file: fake_delete.html -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
   <body onload="document.forms[0].submit()">
     <form method="POST" action="http://php.local/home/delete/101">
         <input type="hidden" name="id_delete" value="101">
